tests/expectations/compiler/futures/async_function_called_twice.out
DCE_ENABLED:
Error [ETYC0372090]: Cannot access argument `0` from future. The future only has `0` arguments.
    --> compiler-test:7:23
     |
   7 |         let x: u8 = f.0;
     |                       ^

DCE_DISABLED:
Error [ETYC0372090]: Cannot access argument `0` from future. The future only has `0` arguments.
    --> compiler-test:7:23
     |
   7 |         let x: u8 = f.0;
     |                       ^
